FLY-12479 Multiple images not showing due to overlapping css issue fixed

--- a/src/plugins/answers/templates/carouselImagePopupTemplate/carouselImagePopupTemplate.scss
+++ b/src/plugins/answers/templates/carouselImagePopupTemplate/carouselImagePopupTemplate.scss
@@ -19,6 +19,8 @@
     margin-left: -8px;
     margin-top: -8px;
     font-family: inter;
+    z-index: 999999;
+    top: 0;
     .sa-cursor-pointer{
         cursor: pointer;
     }
